--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -1,5 +1,48 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    div.container
+        div.masthead
+            h3.muted Plancrow
+            div.navbar
+                div.navbar-inner
+                    div.container
+                        ul.nav
+                            li.active
+                                a(href="#") Home
+                            li
+                                a(href="#") Projects
+                            li
+                                a(href="#") Services
+                            li
+                                a(href="#") Downloads
+                            li
+                                a(href="#") About
+                            li
+                                a(href="#") Contact
+        div.jumbotron
+            h1= title
+            p.lead Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+            a.btn.btn-large.btn-success(href="#") Get started today
+        hr
+
+        div.row-fluid
+            div.span4
+                h2 Heading
+                p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                p
+                    a.btn(href="#") View details &raquo;
+            div.span4
+                h2 Heading
+                p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+                p
+                    a.btn(href="#") View details &raquo;
+            div.span4
+                h2 Heading
+                p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.
+                p
+                    a.btn(href="#") View details &raquo;
+        hr
+
+        div.footer
+            p &copy; Plancrow 2013
