Introduced screen 09 together with orm in express mode for the database

--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -9,22 +9,30 @@ block content
                     div.container
                         ul.nav
                             li.active
-                                a(href="#") Home
+                                a(href="#") What is Plancrow?
                             li
-                                a(href="#") Projects
+                                a(href="#") Our Customers
                             li
-                                a(href="#") Services
+                                a(href="#") Pricing
                             li
-                                a(href="#") Downloads
+                                a(href="#") Public Projects
+                        ul.nav.pull-right
                             li
-                                a(href="#") About
-                            li
-                                a(href="#") Contact
+                                a(href="#") Sign In
         div.jumbotron
             h1= title
             p.lead Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
             a.btn.btn-large.btn-success(href="#") Get started today
         hr
+
+        div.row-fluid
+            div.span12
+                div.alert.alert-block
+                    h4 Static assets: Screens
+                    ul
+                        li
+                            a(href="/screens/09_project_list") Screen 9: Project List
+
 
         div.row-fluid
             div.span4
