Introduced Project Details page

--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -32,6 +32,8 @@ block content
                     ul
                         li
                             a(href="/screens/09_project_list") Screen 9: Project List
+                        li
+                            a(href="/screens/12_project_details") Screen 12: Project Details
 
 
         div.row-fluid
