--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -12,7 +12,8 @@ block content
                     h4= screen_name
                 div.span4
                     h3.muted.pull-right
-                        a(href="/") Plancrow
+                        a(href="/")
+                            img(src="/images/crow-logo.png", width="100px", alt="Plancrow Home")
             div.navbar
                 div.navbar-inner
                     div.container
