Added backbone and wired everything in with it

--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -40,3 +40,6 @@ block content
 
         div.footer
             p &copy; Plancrow 2013
+
+        script(type='text/javascript', src='/javascripts/client/ajax-requests.js')
+
