--- a/Sources/Plancrow/views/layout.jade
+++ b/Sources/Plancrow/views/layout.jade
@@ -6,5 +6,11 @@ html
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/bootstrap/js/bootstrap.min.js')
+
+    script(type='text/javascript', src='/javascripts/ext/jquery-latest.min.js')
+    script(type='text/javascript', src='/javascripts/ext/underscore-min.js')
+    script(type='text/javascript', src='/javascripts/ext/backbone-min.js')
+    script(type='text/javascript', src='/javascripts/ext/browser-jade.js')
+    script(type='text/javascript', src='/javascripts/ext/jade-shim.js')
   body
     block content
