--- a/Sources/Plancrow/public/stylesheets/style.less
+++ b/Sources/Plancrow/public/stylesheets/style.less
@@ -3,6 +3,10 @@ body {
   padding-bottom: 60px;
 }
 
+.draghover {
+  background: lightblue;
+}
+
   /* Custom container */
 .container {
   margin: 0 auto;
