Implemented deletion, notes and proposal for status change on page 12 project details

--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -23,7 +23,7 @@ block content
                             li
                                 a(href="#") Company Settings
                             li
-                                a(href="#") My Projects
+                                a(href="/pages/09_project_list") My Projects
                             li
                                 a(href="#") Reports
                         ul.nav.pull-right
