--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -13,19 +13,19 @@ block au_content
                 h4 Static assets: Screens
                 ul
                     li
-                        a(href="/screens/01_welcome_page") Screen 1: Welcome Page
+                        a(href="/pages/01_welcome_page") Page 1: Welcome Page
                         tt  (not started)
                     li
-                        a(href="/screens/02_pricing_page") Screen 2: Pricing Page
+                        a(href="/pages/02_pricing_page") Page 2: Pricing Page
                         tt  (not started)
                     li
-                        a(href="/screens/03_registration_page") Screen 3: Registration Page
+                        a(href="/pages/03_registration_page") Page 3: Registration Page
                         tt  (not started)
                     li
-                        a(href="/screens/09_project_list") Screen 9: Project List
+                        a(href="/pages/09_project_list") Page 9: Project List
                         tt  (ilya: in progress)
                     li
-                        a(href="/screens/12_project_details") Screen 12: Project Details
+                        a(href="/pages/12_project_details") Page 12: Project Details
                         tt  (ilya: in progress)
 
 
