--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -22,8 +22,29 @@ block au_content
                         a(href="/pages/03_registration_page") Page 3: Registration Page
                         tt  (not started)
                     li
+                        a(href="/pages/04_sign_in_page") Page 4: Sign In Page
+                        tt  (not started)
+                    li
+                        a(href="/pages/05_company_admin") Page 5: Company Admin
+                        tt  (not started)
+                    li
+                        a(href="/pages/06_user_settings") Page 6: User Settings
+                        tt  (not started)
+                    li
+                        a(href="/pages/07_user_list") Page 7: User List
+                        tt  (not started)
+                    li
+                        a(href="/pages/08_invitation") Page 8: Invitation
+                        tt  (not started)
+                    li
                         a(href="/pages/09_project_list") Page 9: Project List
                         tt  (ilya: in progress)
+                    li
+                        a(href="/pages/10_project_creation") Page 10: Project Creation
+                        tt  (not started)
+                    li
+                        a(href="/pages/11_project_settings") Page 11: Project Settings
+                        tt  (not started)
                     li
                         a(href="/pages/12_project_details") Page 12: Project Details
                         tt  (ilya: in progress)
