Further screens 13-25 stubs

--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -48,6 +48,42 @@ block au_content
                     li
                         a(href="/pages/12_project_details") Page 12: Project Details
                         tt  (ilya: in progress)
+                    li
+                        a(href="/pages/13_customers") Page 13: Customers
+                        tt  (not started)
+                    li
+                        a(href="/pages/14_edit_customer") Page 14: Edit Customer
+                        tt  (not started)
+                    li
+                        a(href="/pages/15_invoicing_for_customer") Page 15: Invoicing For Customer
+                        tt  (not started)
+                    li
+                        a(href="/pages/16_invoices_history") Page 16: Invoices History
+                        tt  (not started)
+                    li
+                        a(href="/pages/17_invoice_saving") Page 17: Invoice Saving
+                        tt  (not started)
+                    li
+                        a(href="/pages/18_reports_page") Page 18: Reports Page
+                        tt  (not started)
+                    li
+                        a(href="/pages/19_management_report_screen") Page 19: Management Report Screen
+                        tt  (not started)
+                    li
+                        a(href="/pages/20_project_chart") Page 20: Project Chart
+                        tt  (not started)
+                    li
+                        a(href="/pages/21_user_timing_history") Page 21: User Timing Screen
+                        tt  (not started)
+                    li
+                        a(href="/pages/22_post_time") Page 22: Post Time
+                        tt  (not started)
+                    li
+                        a(href="/pages/23_public_project_registration") Page 23: Public Project Registration
+                        tt  (not started)
+                    li
+                        a(href="/pages/24_public_projects") Page 24: Public Projects
+                        tt  (not started)
 
 
     div.row-fluid
