--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -39,12 +39,12 @@ block content
                             li
                                 a(href="/pages/09_project_list") My Projects
                             - }
-                            - if (screen_name == '18 Reports') {
+                            - if (screen_name == '18 Reports Page') {
                             li.active
                                 a(href="/pages/18_reports") Reports
                             - }else{
                             li
-                                a(href="/pages/18_reports") Reports
+                                a(href="/pages/18_reports_page") Reports
                             - }
                         ul.nav.pull-right
                             - if (screen_name == '22 Post Time') {
