--- a/Sources/Plancrow/views/screens/12_project_details.jade
+++ b/Sources/Plancrow/views/screens/12_project_details.jade
@@ -2,9 +2,12 @@ extends ../authed_layout
 
 mixin phases(phase)
     li.phase(id = "#{phase.id}") Phase: #{phase.name}
-        div.row-fluid.droppable
-            div.name.span12(data-phase-id = "#{phase.id}") drag here [   ]
-
+        div.row-fluid
+            div.name.span2.droppable(data-phase-id = "#{phase.id}") drag here [   ]
+            div.name.span2
+                button.btn.btn-primary.addphase(type = "button", data-phase-id = "#{phase.id}") + phase
+            div.name.span2
+                button.btn.btn-primary.addtask(type = "button", data-phase-id = "#{phase.id}") + task
         - if (phase.children != undefined){
             ul
                 - each child in phase.children
