Introduced select2 to handle multiple selects for the assignment

--- a/Sources/Plancrow/views/layout.jade
+++ b/Sources/Plancrow/views/layout.jade
@@ -13,5 +13,9 @@ html
     script(type='text/javascript', src='/javascripts/ext/jade-shim.js')
     script(type='text/javascript', src='/bootstrap/js/bootstrap.min.js')
 
+    link(rel='stylesheet', href='/javascripts/ext/select2-3.4.1/select2.css')
+    script(type='text/javascript', src='/javascripts/ext/select2-3.4.1/select2.min.js')
+
+
   body
     block content
