--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -54,10 +54,13 @@ block content
                             li
                                 a(href="/pages/22_post_time") Post Time
                             - }
-        div.row-fluid
+        //div.row-fluid
             div.span12.alert.alert-block
                 h4 Warnings!
                 p Your hardcoded indentification values are CUSTOMER_ID=1 and COMPANY_ID=1
+
+        //used on page render
+        script(type='text/javascript', src='/javascripts/client/ajax-requests.js')
 
         block au_content
 
@@ -65,6 +68,3 @@ block content
 
         div.footer
             p &copy; Plancrow 2013
-
-        script(type='text/javascript', src='/javascripts/client/ajax-requests.js')
-
