--- a/Sources/Plancrow/views/screens/22_post_time.jade
+++ b/Sources/Plancrow/views/screens/22_post_time.jade
@@ -2,5 +2,16 @@ extends ../authed_layout
 
 block au_content
     div.row-fluid
-        div.span12
-            h1 not started
+        div.center.offset4.span4
+            table.table.table-bordered
+                caption Post Time
+                thead
+                    tr
+                        th Task
+                        th Time millis
+                tbody.assignments
+                    //tr
+                        td Page 22 Markup
+                        td 666
+
+    script(type='text/javascript', src='/javascripts/client/22_post_time.js')
