Further #8 Markup and js adjustments, tasks list is still not wired in to db

--- a/Sources/Plancrow/views/screens/22_post_time.jade
+++ b/Sources/Plancrow/views/screens/22_post_time.jade
@@ -2,13 +2,13 @@ extends ../authed_layout
 
 block au_content
     div.row-fluid
-        div.center.offset4.span4
+        div.center.offset3.span6
             table.table.table-bordered
                 caption Post Time
                 thead
                     tr
                         th Task
-                        th Time millis
+                        th Time (millis)
                 tbody.assignments
                     //tr
                         td Page 22 Markup
