Performed required adjsutments to enable further development, moved templates to CoffeScript, added CS middleware to process it to js, refactored heavy wirings to it's own modules

--- a/Sources/Plancrow/views/authed_layout.jade
+++ b/Sources/Plancrow/views/authed_layout.jade
@@ -54,13 +54,10 @@ block content
                             li
                                 a(href="/pages/22_post_time") Post Time
                             - }
-        //div.row-fluid
-            div.span12.alert.alert-block
-                h4 Warnings!
-                p Your hardcoded indentification values are CUSTOMER_ID=1 and COMPANY_ID=1
 
-        //used on page render
+        // used on page render
         script(type='text/javascript', src='/javascripts/client/ajax-requests.js')
+        script(type='text/javascript', src='/javascripts/authed_templates.js')
 
         block au_content
 
