--- a/Sources/Plancrow/views/screens/10_project_creation.jade
+++ b/Sources/Plancrow/views/screens/10_project_creation.jade
@@ -12,6 +12,10 @@ block au_content
                         div.controls
                             input#inputName(type='text', placeholder='')
                     div.control-group
+                        label.control-label(for='inputInvName') Invoice Name
+                        div.controls
+                            input#inputInvName(type='text', placeholder='')
+                    div.control-group
                         label.control-label(for='inputBudget') Budget
                         div.controls
                             input#inputBudget(type='number', placeholder='')
