--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -41,7 +41,7 @@ block au_content
                         tt  (ilya: in progress)
                     li
                         a(href="/pages/10_project_creation") Page 10: Project Creation
-                        tt  (not started)
+                        tt  (max: in progress)
                     li
                         a(href="/pages/11_project_settings") Page 11: Project Settings
                         tt  (not started)
