--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -4,7 +4,10 @@ block au_content
     div.jumbotron
         h1= title
         p.lead Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-            a.btn.btn-large.btn-success(href="#") Get started today
+            a.btn.btn-large.btn-success(href="#") Try it for free
+            br
+            br
+            a.btn.btn-large.btn-success(href="#") Sign-in
         hr
 
     div.row-fluid
