--- a/Sources/Plancrow/views/index.jade
+++ b/Sources/Plancrow/views/index.jade
@@ -17,10 +17,10 @@ block au_content
                 ul
                     li
                         a(href="/pages/01_welcome_page") Page 1: Welcome Page
-                        tt  (not started)
+                        tt  (max: in progress)
                     li
                         a(href="/pages/02_pricing_page") Page 2: Pricing Page
-                        tt  (not started)
+                        tt  (max: in progress)
                     li
                         a(href="/pages/03_registration_page") Page 3: Registration Page
                         tt  (not started)
